--- a/css/style.css
+++ b/css/style.css
@@ -96,21 +96,23 @@ p{
 ------------------------------------------------------------------------------------*/
 
 .header{
+	color:#222222;
 	text-align:center;
-	background: url(../img/Banner.jpg) center;
+	background: url(../img/icon2.ico) left;
 	padding:280px 0;
 }
 .logo{
-	width:720px;
+	width:320px;
 	margin:0 auto 35px;
 }
 .header h1{
 	font-family: 'Montserrat',sans-serif;
-	font-size:50px;
+	font-style:bold;
+	font-size:275px;
 	font-weight:400;
 	letter-spacing: -1px;
 	margin:0 0 22px 0 ;
-	color:#fff;
+	color:#586;
 }
 
 .we-create{
@@ -123,11 +125,11 @@ p{
 .we-create li{
 	display:inline-block;
 	font-family: 'Montserrat',sans-serif;
-	font-size:14px;
-	color: #bcbcbc;
+	font-size:20px;
+	color: #000;
 	text-transform: uppercase;
 	font-weight: 400;
-	margin:0 5px 0 0;
+	margin:0 6px 0 0;
 	padding:0 0 0 15px;
 }
 .we-create li:first-child{
@@ -196,8 +198,8 @@ color: #fff;
 	text-transform:uppercase;
 	font-family: 'Montserrat', sans-serif;
 	text-decoration: none;
-	line-height:20px;
-	margin:20px 20px;
+	line-height:10px;
+	margin:10px 10px;
 	transition:all 0.3s ease-in-out;
 	-moz-transition:all 0.3s ease-in-out;
 	-webkit-transition:all 0.3s ease-in-out;
@@ -209,11 +211,11 @@ color: #fff;
 }
 
 .small-logo{ 
-	padding:0 32px;
+	padding:0 1px;
 }
 
 .main-section{
-	padding:90px 0 110px;
+	padding:60px 0 90px;
 }
 
 
@@ -244,7 +246,7 @@ color: #fff;
 	background:#fafafa;
 }
 
-/* Events & About Us
+/* About Us
 ------------------------------------------------------------------------------------*/
 .featured-work{
 	font-size:14px;
@@ -280,13 +282,13 @@ color: #fff;
 }
 .featured-box-col2{ overflow:hidden;}
 .featured-box.magic{
-	background:url(../img/magic.png) left top no-repeat;
+	background:url(../img/icon5.png) left top no-repeat;
 }
 .featured-box.packaged{
-	background:url(../img/packaged.png) left top no-repeat;
+	background:url(../img/icon5.png) left top no-repeat;
 }
 .featured-box.seo{
-	background:url(../img/seo.png) left top no-repeat;
+	background:url(../img/icon5.png) left top no-repeat;
 }
 .Learn-More{
 	display:inline-block;
@@ -347,13 +349,13 @@ color: #fff;
 }
 .about-box-col2{ overflow:hidden;}
 .about-box.magic{
-	background:url(../img/IMAGE.png) left top no-repeat;
+	background:url(../img/icon4.png) left top no-repeat;
 }
 .about-box.packaged{
-	background:url(../img/IMAGE.png) left top no-repeat;
+	background:url(../img/icon4.png) left top no-repeat;
 }
 .about-box.seo{
-	background:url(../img/IMAGE.png) left top no-repeat;
+	background:url(../img/icon4.png) left top no-repeat;
 }
 .Learn-More{
 	display:inline-block;
@@ -571,7 +573,7 @@ img {
 /* Partners & Networking
 ------------------------------------------------------------------------------------*/
 .client-part{
-	background:url(../img/section-bg1.jpg) center center no-repeat;
+	background:url(../img/icon6.jpg) center center no-repeat;
 	background-size:cover;
 	padding:55px 0;
 	text-align:center;
@@ -758,10 +760,10 @@ border: 2px solid #fff;
 	color:#dd4b39;
 }
 
-/* Talk Business
+/* Contact Us
 ------------------------------------------------------------------------------------*/
 .business-talking{
-	background:url(../img/section-bg2.jpg) top center no-repeat;
+	background:url(../img/banner.jpg) top center ;
 	background-size:cover;
 	padding:60px 0 10px;
 	text-align:center;
@@ -784,7 +786,7 @@ border: 2px solid #fff;
 }
 
 .main-section.contact{
-	background:url(../img/bg-map.png) left 190px no-repeat;
+	background:url(../img/iconic1.ico) right 190px no-repeat;
 }
 .contact-info-box{
 	font-size:15px;
@@ -942,7 +944,7 @@ border: 2px solid #fff;
 ------------------------------------------------------------------------------------*/
 
 .footer{
-	background:url(../img/pw_maze_black_2X.png) left top repeat;
+	background:url(../img/icon6.ico) left top repeat;
 	padding:35px 0 35px;
 }
 .footer-logo{
