Changes to World Creation Page
This originally came from Cameron who is having issues Committing right now. He was having issues with the carousel. I took a look at it and got it working (partially). looks like there may need to be some tweaking with CSS.  Or, at this stage, my personal thought is to use the updated menu at the bottom (would then add in the corresponding sections below - so more coding needed, but mainly stealing from the main landing page and re-working as needed).

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,16 @@
 .fl-lt {float:left;}
 .fl-rt {float:right;}
 
+
+
+
+
+
+
+
+
+
+
 /* Clear Floated Elements
 ------------------------------------------------------------------------------------*/
 .clear {
@@ -39,7 +49,7 @@
 
 .figure{ margin:0px;}
 
-img{ max-width:90%;}
+/* img{ max-width:90%;} */
 
 a, a:hover, a:active{ outline:0px !important}
 
@@ -50,6 +60,21 @@ a, a:hover, a:active{ outline:0px !important}
   font-weight: normal;
   font-style: normal;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* Primary Styles
 ------------------------------------------------------------------------------------*/
@@ -91,6 +116,25 @@ p{
 	line-height:24px;
 	margin:0;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* Header Styles
 ------------------------------------------------------------------------------------*/
@@ -173,6 +217,31 @@ color: #fff;
 	color:#fff !important;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Navigation
 ------------------------------------------------------------------------------------*/
 .main-nav-outer{
@@ -219,7 +288,25 @@ color: #fff;
 }
 
 
-/* Menu
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* MAIN MENU
 ------------------------------------------------------------------------------------*/
 
 .service-list{
@@ -245,6 +332,54 @@ color: #fff;
 .main-section.alabaster{
 	background:#fafafa;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* WORLD BUILDING
+------------------------------------------------------------------------------------*/
+
+#myCarousel{
+	
+	width: 25%;
+	text-align: right;
+	background-color: #444444;
+	background:#ffffff;
+	
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* About Us
 ------------------------------------------------------------------------------------*/
@@ -313,6 +448,32 @@ color: #fff;
 	color: #111;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* About Us
 ------------------------------------------------------------------------------------*/
 .about-work{
@@ -379,6 +540,33 @@ color: #fff;
 	text-decoration:none;
 	color: #111;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* Menu
@@ -484,6 +672,24 @@ img {
 }
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Portfolio
 ------------------------------------------------------------------------------------*/
 .Portfolio-nav{
@@ -569,6 +775,43 @@ img {
 .main-section.paddind{
 	padding-bottom:60px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* Partners & Networking
 ------------------------------------------------------------------------------------*/
@@ -660,6 +903,26 @@ border: 2px solid #fff;
 .main-section.team h6{
 	margin-bottom:40px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* Team
@@ -760,6 +1023,27 @@ border: 2px solid #fff;
 	color:#dd4b39;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Contact Us
 ------------------------------------------------------------------------------------*/
 .business-talking{
@@ -777,6 +1061,29 @@ border: 2px solid #fff;
 	font-size:42px;
 	color:#fff;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* Contact
@@ -940,6 +1247,32 @@ border: 2px solid #fff;
 	display:block;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Footer
 ------------------------------------------------------------------------------------*/
 
@@ -993,6 +1326,23 @@ border: 2px solid #fff;
 .MenuContainer{
 	max-width: 1140px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* Animation Timers
