This is a Summary
This is a description

--- a/DND-master/css/style.css
+++ b/DND-master/css/style.css
@@ -12,16 +12,6 @@
 .fl-lt {float:left;}
 .fl-rt {float:right;}
 
-
-
-
-
-
-
-
-
-
-
 /* Clear Floated Elements
 ------------------------------------------------------------------------------------*/
 .clear {
@@ -49,7 +39,7 @@
 
 .figure{ margin:0px;}
 
-/* img{ max-width:90%;} */
+img{ max-width:90%;}
 
 a, a:hover, a:active{ outline:0px !important}
 
@@ -60,21 +50,6 @@ a, a:hover, a:active{ outline:0px !important}
   font-weight: normal;
   font-style: normal;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* Primary Styles
 ------------------------------------------------------------------------------------*/
@@ -116,25 +91,6 @@ p{
 	line-height:24px;
 	margin:0;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* Header Styles
 ------------------------------------------------------------------------------------*/
@@ -217,31 +173,6 @@ color: #fff;
 	color:#fff !important;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* Navigation
 ------------------------------------------------------------------------------------*/
 .main-nav-outer{
@@ -288,25 +219,7 @@ color: #fff;
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* MAIN MENU
+/* Menu
 ------------------------------------------------------------------------------------*/
 
 .service-list{
@@ -332,54 +245,6 @@ color: #fff;
 .main-section.alabaster{
 	background:#fafafa;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* WORLD BUILDING
-------------------------------------------------------------------------------------*/
-
-#myCarousel{
-	
-	width: 50%;
-	text-align: right;
-	background-color: #444444;
-	background:#ffffff;
-	
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* About Us
 ------------------------------------------------------------------------------------*/
@@ -448,32 +313,6 @@ color: #fff;
 	color: #111;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* About Us
 ------------------------------------------------------------------------------------*/
 .about-work{
@@ -540,33 +379,6 @@ color: #fff;
 	text-decoration:none;
 	color: #111;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 /* Menu
@@ -672,24 +484,6 @@ img {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* Portfolio
 ------------------------------------------------------------------------------------*/
 .Portfolio-nav{
@@ -775,43 +569,6 @@ img {
 .main-section.paddind{
 	padding-bottom:60px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* Partners & Networking
 ------------------------------------------------------------------------------------*/
@@ -903,26 +660,6 @@ border: 2px solid #fff;
 .main-section.team h6{
 	margin-bottom:40px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 /* Team
@@ -1023,27 +760,6 @@ border: 2px solid #fff;
 	color:#dd4b39;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* Contact Us
 ------------------------------------------------------------------------------------*/
 .business-talking{
@@ -1061,29 +777,6 @@ border: 2px solid #fff;
 	font-size:42px;
 	color:#fff;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 /* Contact
@@ -1247,32 +940,6 @@ border: 2px solid #fff;
 	display:block;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* Footer
 ------------------------------------------------------------------------------------*/
 
@@ -1326,23 +993,6 @@ border: 2px solid #fff;
 .MenuContainer{
 	max-width: 1140px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 /* Animation Timers
