--- a/css/style.css
+++ b/css/style.css
@@ -354,10 +354,10 @@ color: #fff;
 
 #myCarousel{
 	
-	width: 25%;
+	
 	text-align: right;
-	background-color: #444444;
-	background:#ffffff;
+	background-color: #444;
+	background:#fff;
 	
 }
 
