--- a/css/style.css
+++ b/css/style.css
@@ -327,9 +327,30 @@ color: #fff;
 	line-height:38px;
 }
 .service-list-col2{
+	float:left;
+	overflow:hidden;	
+	width:600px;
+	height:70px;
+}
+
+.service-list-col3{
+	text-align:left;
 	overflow:hidden;	
 	width:600px;
 }
+
+.service-list-col4{
+	text-align:right;
+	overflow:hidden;	
+	width:600px;
+}
+
+.service-list-col5{
+	text-align:center;
+	overflow:hidden;	
+	width:600px;
+}
+
 .main-section.alabaster{
 	background:#fafafa;
 }
@@ -354,7 +375,7 @@ color: #fff;
 ------------------------------------------------------------------------------------*/
 
 #myCarousel{
-	width: 25%;
+	width: 20%;
 	text-align: right;
 	background-color: #444;
 	background:#fff;
