--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ p{
 .header{
 	color:#222222;
 	text-align:center;
-	background: url(../img/icon2.ico) left;
+	background: url(../img/Background2.jpg) left;
 	padding:280px 0;
 }
 .logo{
@@ -152,7 +152,7 @@ p{
 .header h1{
 	font-family: 'Montserrat',sans-serif;
 	font-style:bold;
-	font-size:275px;
+	font-size:200px;
 	font-weight:400;
 	letter-spacing: -1px;
 	margin:0 0 22px 0 ;
@@ -169,8 +169,8 @@ p{
 .we-create li{
 	display:inline-block;
 	font-family: 'Montserrat',sans-serif;
-	font-size:20px;
-	color: #000;
+	font-size:25px;
+	color: #654;
 	text-transform: uppercase;
 	font-weight: 400;
 	margin:0 6px 0 0;
