--- a/css/style.css
+++ b/css/style.css
@@ -354,9 +354,9 @@ color: #fff;
 }
 
 .service-list-col5{
-	text-align:center;
+	text-align:left;
 	overflow:hidden;	
-	width:600px;
+	width:400px;
 }
 
 .main-section.alabaster{
