--- a/css/style.css
+++ b/css/style.css
@@ -445,6 +445,7 @@ color: #fff;
 	font-style:normal;
 }
 .featured-box-col2{ overflow:hidden; width: 500px;}
+.featured-box-col3{ overflow:hidden; width: 500px; text-align:left;}
 .featured-box.magic{
 	background:url(../img/icon5.png) left top no-repeat;
 }
@@ -766,11 +767,12 @@ img {
 	text-align:center;
 	margin-bottom:30px;
 	height:250px;
-	width:250px;
+	width:300px;
 	overflow:hidden;
 	float:left;
 	padding:0;
 }
+
 .Portfolio-box img{
 	margin-bottom:25px;
 	transition:all 0.3s ease-in-out;
@@ -1304,14 +1306,11 @@ border: 2px solid #fff;
 
 
 
-
-
-
 /* Footer
-------------------------------------------------------------------------------------*/
+-----------------------------background:url(../img/icon6.ico) left top repeat;-------------------------------------------------------*/
 
 .footer{
-	background:url(../img/icon6.ico) left top repeat;
+	
 	padding:35px 0 35px;
 }
 .footer-logo{
