--- a/css/style.css
+++ b/css/style.css
@@ -783,6 +783,26 @@ img {
 	padding:0;
 }
 
+.Portfolio-box2{
+	text-align:center;
+	margin-bottom:30px;
+	height:250px;
+	width:200px;
+	overflow:hidden;
+	float:left;
+	padding:0;
+}
+
+.Portfolio-box3{
+	text-align:center;
+	margin-bottom:30px;
+	height:250px;
+	width:220px;
+	overflow:hidden;
+	float:left;
+	padding:0;
+}
+
 .Portfolio-box img{
 	margin-bottom:25px;
 	transition:all 0.3s ease-in-out;
